fixed errors and cleaned up

--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 {% extends "layout.html" %}
 
 {% block content %}
@@ -8,7 +10,7 @@
         <div id="overallContainer" class="overall">
             <div class="row">
                 <div class="col-lg-12">
-                    <span> QUIZ PAGE <span>
+                    <span> QUIZ PAGE </span>
                 </div>
             </div>
         </div>
