--- a/templates/learn.html
+++ b/templates/learn.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html lang="en">
+
 {% extends "layout.html" %}
 
 {% block content %}
@@ -8,7 +11,7 @@
         <div id="overallContainer" class="overall">
             <div class="row">
                 <div class="col-lg-12">
-                    <span>Learn Page<span>
+                    <span>Learn Page</span>
                 </div>
             </div>
             <div>
