--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -10,81 +10,119 @@
             {% for question in module.questions %}
             <div class="quiz-question mb-4 p-3 border rounded">
                 <h5>{{ question.text }}</h5>
-                
-                {% if question.type == 'drag-drop' %}
-                <div class="drag-drop-question">
-                    <div class="drag-elements mb-3">
-                        {% for item in question.drag_items %}
-                        <span class="drag-item badge bg-secondary me-2 mb-2" draggable="true"
-                              data-value="{{ item.value }}">{{ item.text }}</span>
-                        {% endfor %}
-                    </div>
-                    <p class="fw-bold">{{ question.description }}</p>
-                    <div class="drop-zone p-3 border rounded bg-light mb-3">
-                        <p class="text-muted mb-0">Drop answer here</p>
-                        <input type="hidden" name="{{ question.id }}" class="drop-value" required>
-                    </div>
-                </div>
-                
-                {% elif question.type == 'matching' %}
-                <div class="matching-question">
-                    <div class="row">
-                        <div class="col-md-5">
-                            <h6>Items</h6>
-                            <ul class="list-group match-items">
-                                {% for item in question.left_items %}
-                                <li class="list-group-item d-flex align-items-center" 
-                                    data-value="{{ item.value }}" draggable="true">
-                                    <span class="drag-handle me-2">☰</span>
-                                    {{ item.text }}
-                                </li>
+                <div class="row">
+                    <div class="col-lg-8">
+                        {% if question.type == 'drag-drop' %}
+                        <div class="drag-drop-question">
+                            <div class="drag-elements mb-3">
+                                {% for item in question.drag_items %}
+                                <span class="drag-item badge bg-secondary me-2 mb-2" draggable="true"
+                                      data-value="{{ item.value }}">{{ item.text }}</span>
                                 {% endfor %}
-                            </ul>
+                            </div>
+                            <p class="fw-bold">{{ question.description }}</p>
+                            <div class="drop-zone p-3 border rounded bg-light mb-3">
+                                <p class="text-muted mb-0">Drop answer here</p>
+                                <input type="hidden" name="{{ question.id }}" class="drop-value" required>
+                            </div>
                         </div>
-                        <div class="col-md-2 text-center align-self-center">
-                            <i class="bi bi-arrow-left-right fs-3 text-muted d-none d-md-block"></i>
-                            <i class="bi bi-arrow-down-up fs-3 text-muted d-md-none"></i>
+                        
+                        {% elif question.type == 'matching' %}
+                        <div class="matching-question">
+                            <div class="row">
+                                <div class="col-md-5">
+                                    <h6>Items</h6>
+                                    <ul class="list-group match-items">
+                                        {% for item in question.left_items %}
+                                        <li class="list-group-item d-flex align-items-center" 
+                                            data-value="{{ item.value }}" draggable="true">
+                                            <span class="drag-handle me-2">☰</span>
+                                            {{ item.text }}
+                                        </li>
+                                        {% endfor %}
+                                    </ul>
+                                </div>
+                                <div class="col-md-2 text-center align-self-center">
+                                    <i class="bi bi-arrow-left-right fs-3 text-muted d-none d-md-block"></i>
+                                    <i class="bi bi-arrow-down-up fs-3 text-muted d-md-none"></i>
+                                </div>
+                                <div class="col-md-5">
+                                    <h6>Matches</h6>
+                                    <ul class="list-group match-targets">
+                                        {% for item in question.right_items %}
+                                        <li class="list-group-item" 
+                                            data-value="{{ item.value }}" 
+                                            data-matched="false">
+                                            {{ item.text }}
+                                        </li>
+                                        {% endfor %}
+                                    </ul>
+                                </div>
+                            </div>
+                            <input type="hidden" name="{{ question.id }}" class="match-value" required>
                         </div>
-                        <div class="col-md-5">
-                            <h6>Matches</h6>
-                            <ul class="list-group match-targets">
-                                {% for item in question.right_items %}
-                                <li class="list-group-item" 
-                                    data-value="{{ item.value }}" 
-                                    data-matched="false">
-                                    {{ item.text }}
-                                </li>
-                                {% endfor %}
-                            </ul>
+                        
+                        {% elif question.type == 'fill-blank' %}
+                        <div class="fill-blank-question">
+                            <div class="input-group mb-3" style="max-width: 400px;">
+                                <span class="input-group-text">Answer:</span>
+                                <input type="text" class="form-control" name="{{ question.id }}" 
+                                       placeholder="Type your answer" required>
+                            </div>
                         </div>
+                        
+                        {% else %}
+                        <div class="ms-3">
+                            {% for option in question.options %}
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" 
+                                       name="{{ question.id }}" 
+                                       id="{{ question.id }}_{{ loop.index }}" 
+                                       value="{{ option.value }}" required>
+                                <label class="form-check-label" for="{{ question.id }}_{{ loop.index }}">
+                                    {{ option.text }}
+                                </label>
+                            </div>
+                            {% endfor %}
+                        </div>
+                        {% endif %}
                     </div>
-                    <input type="hidden" name="{{ question.id }}" class="match-value" required>
-                </div>
-                
-                {% elif question.type == 'fill-blank' %}
-                <div class="fill-blank-question">
-                    <div class="input-group mb-3" style="max-width: 400px;">
-                        <span class="input-group-text">Answer:</span>
-                        <input type="text" class="form-control" name="{{ question.id }}" 
-                               placeholder="Type your answer" required>
+                    <div class="col-lg-4">
+                        <div class="row">
+                            <div class="col-lg-12">
+                                {% if module.image1 %}
+                                    <img src="{{ url_for('static', filename='images/' + module.image1) }}" 
+                                        class="img-fluid mb-3 rounded" 
+                                        alt="{{ module.title }}"
+                                        style="height: 175px;">
+                                {% endif %}
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12">
+                                {% if module.image2 %}
+                                    <img src="{{ url_for('static', filename='images/' + module.image2) }}" 
+                                        class="img-fluid mb-3 rounded" 
+                                        alt="{{ module.title }}"
+                                        style="height: 175px;">
+                                {% endif %}
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12">
+                                {% if module.image3 %}
+                                    <img src="{{ url_for('static', filename='images/' + module.image3) }}" 
+                                        class="img-fluid mb-3 rounded" 
+                                        alt="{{ module.title }}"
+                                        style="height: 175px;">
+                                {% endif %}
+                            </div>
+                        </div>
+                        {% if module.model %}
+                            <model-viewer alt="{{ module.title }}" src="{{ url_for('static', filename='models/' + module.model) }}" shadow-intensity="1" camera-controls touch-action="pan-y" style="height: 100%;"></model-viewer>
+                        {% endif %}
                     </div>
                 </div>
-                
-                {% else %}
-                <div class="ms-3">
-                    {% for option in question.options %}
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" 
-                               name="{{ question.id }}" 
-                               id="{{ question.id }}_{{ loop.index }}" 
-                               value="{{ option.value }}" required>
-                        <label class="form-check-label" for="{{ question.id }}_{{ loop.index }}">
-                            {{ option.text }}
-                        </label>
-                    </div>
-                    {% endfor %}
-                </div>
-                {% endif %}
             </div>
             {% endfor %}
         </form>
