--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <div class="col-md-6">
         <div class="card">
             <div class="card-header bg-primary text-white">
-                <h3 class="card-title text-center">Welcome to 3D Modeling Tutor</h3>
+                <h3 class="card-title text-center">Welcome to 3D Conceptualization Using Basic Primitives & Swept 2D Profiles</h3>
             </div>
             <div class="card-body">
                 <form method="POST" action="{{ url_for('start') }}">
