Updated Quizzes, Added Models

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,12 +24,21 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><h6 class="dropdown-header">Learning Modules</h6></li>
-                            <li><a class="dropdown-item" href="{{ url_for('load_module', module_id=1) }}">1. Introduction</a></li>
-                            <li><a class="dropdown-item" href="{{ url_for('load_module', module_id=2) }}">2. The Cube</a></li>
-                            <li><a class="dropdown-item" href="{{ url_for('load_module', module_id=3) }}">3. The Sphere</a></li>
-                            <li><a class="dropdown-item" href="{{ url_for('load_module', module_id=4) }}">4. The Cylinder</a></li>
-                            <li><a class="dropdown-item" href="{{ url_for('load_module', module_id=5) }}">5. The Cone</a></li>
-                            <li><a class="dropdown-item" href="{{ url_for('load_module', module_id=6) }}">6. The Torus</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('load_module', module_id=1) }}">1. Introduction to Basic 3D Primitives</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('load_module', module_id=2) }}">2. Less Common Primitives</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('load_module', module_id=3) }}">3. 3D to 2D Correlation</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('load_module', module_id=4) }}">4. Shapes That Vary Along 2 Axes</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('load_module', module_id=5) }}">5. Negative Space</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('load_module', module_id=6) }}">6. Combining Similar Primitives</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('load_module', module_id=1) }}">7. Combining Different Primitives</a></li>
+                            <li><h6 class="dropdown-header">Gear Case Study</h6></li>
+                            <li><a class="dropdown-item" href="{{ url_for('load_module', module_id=2) }}">8. Introduction</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('load_module', module_id=3) }}">9. Cylinders</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('load_module', module_id=4) }}">10. Rectangular Prisms</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('load_module', module_id=5) }}">11. Wedges</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('load_module', module_id=6) }}">12. Negative Spaces and Manufacturing</a></li>
+                            <li><h6 class="dropdown-header">Conclusion</h6></li>
+                            <li><a class="dropdown-item" href="{{ url_for('load_module', module_id=6) }}">13. Conclusion & Quiz Readiness</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><h6 class="dropdown-header">Quizzes</h6></li>
                             <li><a class="dropdown-item" href="{{ url_for('load_module', module_id=7) }}">Start Quizzes</a></li>
