Updated Drop Down Menu, Added Progress bar

--- a/templates/module.html
+++ b/templates/module.html
@@ -51,6 +51,9 @@
             </div>
         </div>
     </div>
+    <div class="progress">
+        <div class="progress-bar" role="progressbar" aria-valuenow="{{ module.progress }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ module.progress }}%;">{{ module.progress }}%</div>
+    </div>
     <div class="card-footer">
         <div class="d-flex justify-content-between">
             {% if module_id > 1 %}
