--- a/templates/module.html
+++ b/templates/module.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="card">
-    <div class="card-header bg-info text-white">
+    <div class="card-header text-white color_header1">
         <h3 class="card-title">{{ module.title }}</h3>
     </div>
     <div class="card-body" style="height: 600px;">
