--- a/templates/index.html
+++ b/templates/index.html
@@ -4,16 +4,16 @@
 <div class="row justify-content-center">
     <div class="col-md-6">
         <div class="card">
-            <div class="card-header bg-primary text-white">
+            <div class="card-header text-white color_header1">
                 <h3 class="card-title text-center">3D Conceptualization</h3>
             </div>
             <div class="card-body">
                 <form method="POST" action="{{ url_for('start') }}">
                     <div class="mb-3">
                         <label for="username" class="form-label">Enter your name to begin:</label>
-                        <input type="text" class="form-control" id="username" name="username" required>
+                        <input type="text" class="form-control border-black" id="username" name="username" required>
                     </div>
-                    <button type="submit" class="btn btn-primary w-100">Start Learning</button>
+                    <button type="submit" class="btn color_button1 w-100">Start Learning</button>
                 </form>
             </div>
         </div>
