--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,32 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
+            <div class="d-flex align-items-center w-100">
+                <!-- Left-aligned navigation links -->
+                <div class="d-flex align-items-center me-auto">
+                    <a class="navbar-brand me-4" href="{{ url_for('load_module', module_id=1) }}">
+                        3D Modeling Tutor
+                    </a>
+                    {% if 'username' in session %}
+                    <div class="navbar-nav">
+                        <a class="nav-link me-3" href="{{ url_for('load_module', module_id=1) }}">Learning</a>
+                        <a class="nav-link" href="{{ url_for('load_module', module_id=14) }}">Quizzes</a>
+                    </div>
+                    {% endif %}
+                </div>
+    
+                <!-- Right-aligned user info -->
+                {% if 'username' in session %}
+                <div class="d-flex align-items-center">
+                    <span class="navbar-text me-3">Hello, {{ session['username'] }}</span>
+                    <a class="btn btn-sm btn-outline-warning" href="{{ url_for('index') }}">Change Name & Restart</a>
+                </div>
+                {% endif %}
+            </div>
+        </div>
+    </nav>
+    <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
             <a class="navbar-brand" href="{{ url_for('index') }}">3D Modeling Tutor</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -62,7 +88,7 @@
                 </ul>
             </div>
         </div>
-    </nav>
+    </nav> -->
 
     <div class="container mt-4">
         {% block content %}{% endblock %}
