--- a/templates/module.html
+++ b/templates/module.html
@@ -6,6 +6,7 @@
         <h3 class="card-title">{{ module.title }}</h3>
     </div>
     <div class="card-body" style="height: 600px;">
+        {% if module.type == 1 %}
         <div class="module-content">
             <div class="row">
                 <div class="col-lg-8">
@@ -44,12 +45,112 @@
                             {% endif %}
                         </div>
                     </div>
-                    {% if module.model %}
-                        <model-viewer alt="{{ module.title }}" src="{{ url_for('static', filename='models/' + module.model) }}" shadow-intensity="1" camera-controls touch-action="pan-y" style="height: 100%;"></model-viewer>
+                    {% if module.rightModel %}
+                        <model-viewer alt="{{ module.title }}" src="{{ url_for('static', filename='models/' + module.rightModel) }}" shadow-intensity="1" camera-controls touch-action="pan-y" style="height: 100%;"></model-viewer>
                     {% endif %}
                 </div>
             </div>
         </div>
+        {% endif %}
+        {% if module.type == 2 %}
+        <div class="module-content">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="module-text">
+                        {{ module.content|safe }}
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <div class="module-text">
+                        {{ module.mediaTitle|safe }}
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                {% if module.image3 or module.smallModel3 %}
+                <div class="col-lg-4">
+                {% elif module.image2 or module.smallModel2 %}
+                <div class="col-lg-6">
+                {% else %}
+                <div class="col-lg-12">
+                {% endif %}
+                    <div class="row">
+                        <div class="col-lg-12 d-flex justify-content-center">
+                            {% if module.image1 %}
+                            <img src="{{ url_for('static', filename='images/' + module.image1) }}" 
+                            class="img-fluid mb-3 rounded" 
+                            alt="{{ module.title }}"
+                            style="height: 175px;">
+                            {% endif %}
+                            {% if module.smallModel1 %}
+                            <model-viewer alt="{{ module.title }}" camera-orbit="45deg 55deg 4m" src="{{ url_for('static', filename='models/' + module.smallModel1) }}" shadow-intensity="1" camera-controls touch-action="pan-y" style="height: 275px; width: 100%;"></model-viewer>
+                            {% endif %}
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12 text-center">
+                            {{ module.caption1|safe }}
+                        </div>
+                    </div>
+                </div>
+                {% if module.image3 or module.smallModel3 %}
+                <div class="col-lg-4">
+                {% elif module.image2 or module.smallModel2 %}
+                <div class="col-lg-6">
+                {% endif %}
+                {% if module.image2 or module.smallModel2 %}
+                    <div class="row">
+                        <div class="col-lg-12 d-flex justify-content-center">
+                            {% if module.image2 %}
+                            <img src="{{ url_for('static', filename='images/' + module.image2) }}" 
+                            class="img-fluid mb-3 rounded" 
+                            alt="{{ module.title }}"
+                            style="height: 175px;">
+                            {% endif %}
+                            {% if module.smallModel2 %}
+                            <model-viewer alt="{{ module.title }}" camera-orbit="45deg 55deg 4m" src="{{ url_for('static', filename='models/' + module.smallModel2) }}" shadow-intensity="1" camera-controls touch-action="pan-y" style="height: 275px; width: 100%;"></model-viewer>
+                            {% endif %}
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12 text-center">
+                            {{ module.caption2|safe }}
+                        </div>
+                    </div>
+                </div>
+                {% endif %}
+                {% if module.image3 or module.smallModel3 %}
+                <div class="col-lg-4">
+                    <div class="row">
+                        <div class="col-lg-12 d-flex justify-content-center">
+                            {% if module.image3 %}
+                            <img src="{{ url_for('static', filename='images/' + module.image3) }}" 
+                            class="img-fluid mb-3 rounded" 
+                            alt="{{ module.title }}"
+                            style="height: 175px;">
+                            {% endif %}
+                            {% if module.smallModel3 %}
+                            <model-viewer alt="{{ module.title }}" camera-orbit="45deg 55deg 4m" src="{{ url_for('static', filename='models/' + module.smallModel3) }}" shadow-intensity="1" camera-controls touch-action="pan-y" style="height: 275px; width: 100%;"></model-viewer>
+                            {% endif %}
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12 text-center">
+                            {{ module.caption3|safe }}
+                        </div>
+                    </div>
+                </div>
+                {% endif %}
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    {{ module.takeawayContent|safe }}
+                </div>
+            </div>
+        </div>
+        {% endif %}
     </div>
     <div class="progress">
         <div class="progress-bar" role="progressbar" aria-valuenow="{{ module.progress }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ module.progress }}%;">{{ module.progress }}%</div>
@@ -57,7 +158,7 @@
     <div class="card-footer">
         <div class="d-flex justify-content-between">
             {% if module_id > 1 %}
-                {% if module_id == 13 %}
+                {% if module_id == 15 %}
                 <a href="{{ url_for('load_module', module_id=1) }}" class="btn btn-secondary">Back to Beginning</a>
                 {% else %}
                 <a href="{{ url_for('load_module', module_id=module_id-1) }}" class="btn btn-secondary">Back</a>
