Fixed quizzes link, fixed permanence drag drop bug, results page module numbering bug fixed

--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -258,6 +258,7 @@ $(document).ready(function() {
     // Remove item from drop zone
     $(document).on('click', '.remove-item', function() {
         const badge = $(this).closest('.badge');
+        const value = badge.data('value');
         const dropZone = badge.closest('.drop-zone');
         badge.remove();
         $(`.drag-item[data-value="${value}"]`).show();
