Fixed typos in quiz questions and learning modules

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -42,7 +42,7 @@ body {
 
 /* Quiz Styles */
 .quiz-question {
-    background-color: #f8f9fa;
+    background-color: #ffffff;
     border-radius: 5px;
 }
 
