--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
                 <!-- Left-aligned navigation links -->
                 <div class="d-flex align-items-center me-auto">
                     <a class="navbar-brand me-4" href="{{ url_for('load_module', module_id=1) }}">
-                        3D Modeling Tutor
+                        3D Conceptualization
                     </a>
                     {% if 'username' in session %}
                     <div class="navbar-nav">
@@ -37,7 +37,7 @@
     </nav>
     <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="{{ url_for('index') }}">3D Modeling Tutor</a>
+            <a class="navbar-brand" href="{{ url_for('index') }}">3D Conceptualization</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
