--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/4.0.0/model-viewer.min.js"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark color_navbar">
         <div class="container">
             <div class="d-flex align-items-center w-100">
                 <!-- Left-aligned navigation links -->
