--- a/templates/module.html
+++ b/templates/module.html
@@ -153,7 +153,7 @@
         {% endif %}
     </div>
     <div class="progress">
-        <div class="progress-bar" role="progressbar" aria-valuenow="{{ module.progress }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ module.progress }}%;">{{ module.progress }}%</div>
+        <div class="progress-bar" role="progressbar" aria-valuenow="{{ module.progress }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ module.progress }}%;"></div>
     </div>
     <div class="card-footer">
         <div class="d-flex justify-content-between">
